<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_favorite"
        android:icon="@mipmap/ic_star"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_contacto"
        android:title="@string/action_contacto"
        app:showAsAction="never"
        android:orderInCategory="100"/>

    <item android:id="@+id/action_acerca"
        android:title="@string/action_acerca"
        app:showAsAction="never"
        android:orderInCategory="101"/>

</menu>